--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>こんにちはせかい</h1>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+</head>
+<body>
+  <h1>はじめ</h1>
+</body>
+</html>
