自己紹介へのリンク作成

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>はじめ</h1>
+  <h1>吉尾の練習ページ</h1>
+
+  <h2><a href="zikosyoukai.html">自己紹介ページ</a></h2>
 </body>
 </html>
