--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>吉尾の練習ページ</h1>
 
-  <h2><a href="zikosyoukai.html">自己紹介ページ</a></h2>
+  <h2><a href="introduction.html">自己紹介ページ</a></h2>
 </body>
 </html>
