--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>吉尾の練習ページ</title>
 </head>
 <body>
   <h1>吉尾の練習ページ</h1>
