--- a/introduction.html
+++ b/introduction.html
@@ -5,7 +5,18 @@
   <title>自己紹介｜吉尾の練習ページ</title>
 </head>
 <body>
-
+<h1>自己紹介</h1>
+<h2>趣味</h2>
+<ul>
+  <li>オンラインゲーム</li>
+  <li>雑談</li>
+</ul>
+<h2>好きな食べ物</h2>
+<ol>
+  <li>牛乳</li>
+  <li>スパゲッティ</li>
+  <li>豆腐ハンバーグ</li>
+</ol>
 </body>
 </html>
 <!--コメント行  -->
