--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <h1>吉尾の練習ページ</h1>
 
   <h2><a href="introduction.html">自己紹介ページ</a></h2>
+
+  <img src="testpic.JPG" alt=ラグーナ蒲郡にて>
 </body>
 </html>
