ディレクトリとパスの整理

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
   <h1>吉尾の練習ページ</h1>
 
-  <h2><a href="introduction.html">自己紹介ページ</a></h2>
+  <h2><a href="subpage/introduction.html">自己紹介ページ</a></h2>
 
-  <img src="testpic.JPG" alt=ラグーナ蒲郡にて>
+  <img src="picture/testpic.JPG" alt=ラグーナ蒲郡にて>
 </body>
 </html>
