--- a/subpage/introduction.html
+++ b/subpage/introduction.html
@@ -2,14 +2,15 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="../style.css">
   <title>自己紹介｜吉尾の練習ページ</title>
 </head>
 <body>
 <h1>自己紹介</h1>
 <h2>趣味</h2>
 <ul>
-  <li>オンラインゲーム</li>
   <li>雑談</li>
+  <li>オンラインゲーム</li>
 </ul>
 <h2>好きな食べ物</h2>
 <ol>
@@ -22,4 +23,5 @@
 </h3>
 </body>
 </html>
-<!--コメント行  -->
+<!--リストの中身が文字数によってずれてる
+前要素の先頭文字と並んで配置するためにはどうしましょ  -->
