CSSいろいろ調整
文字の配置が思うようにいかない
class,id属性で指定したかったができず

--- a/subpage/introduction.html
+++ b/subpage/introduction.html
@@ -18,10 +18,10 @@
   <li>スパゲッティ</li>
   <li>豆腐ハンバーグ</li>
 </ol>
-<h3>
-<a href="../">ホームへ</a>
-</h3>
+<a href="../" id="gohome">ホームへ</a>
 </body>
 </html>
 <!--リストの中身が文字数によってずれてる
-前要素の先頭文字と並んで配置するためにはどうしましょ  -->
+前要素の先頭文字と並んで配置するためにはどうしましょ
+idタグが上手くつかえない
+  -->
