--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
   <h2><a href="subpage/introduction.html">自己紹介ページ</a></h2>
 
   <img src="picture/testpic.JPG" alt=ラグーナ蒲郡にて>
+
+  <footer>
+  Copyright 2016  
+  </footer>
 </body>
 </html>
