背景と画像

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
   <h2><a href="subpage/introduction.html">自己紹介ページ</a></h2>
 
-  <img src="picture/testpic.JPG" alt=ラグーナ蒲郡にて>
+  <img src="picture/laguna.JPG" alt=ラグーナ蒲郡にて id=laguna>
 
   <footer>
-  Copyright 2016  
+  Copyright 2016
   </footer>
 </body>
 </html>
