--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
   <h1>吉尾の練習ページ</h1>
 
-  <h2><a href="subpage/introduction.html">自己紹介ページ</a></h2>
+  <nav>
+    <h2><a href="subpage/introduction.html">自己紹介ページ</a></h2>
+    <h2><a href="subpage/link.html">リンク集</a></h2>
+  </nav>
 
   <img src="picture/laguna.JPG" alt=ラグーナ蒲郡にて id=laguna>
 
