--- a/subpage/introduction.html
+++ b/subpage/introduction.html
@@ -13,15 +13,15 @@
   <li>オンラインゲーム</li>
 </ul>
 <h2>好きな食べ物</h2>
-<ol>
+<ul>
   <li>牛乳</li>
   <li>スパゲッティ</li>
   <li>豆腐ハンバーグ</li>
-</ol>
-<a href="../" id="gohome">ホームへ</a>
+</ul>
+<a href="../" class=gohome>ホームへ</a>
+
+  <footer>
+    Copyright 2016
+  </footer>
 </body>
 </html>
-<!--リストの中身が文字数によってずれてる
-前要素の先頭文字と並んで配置するためにはどうしましょ
-idタグが上手くつかえない
-  -->
