--- a/subpage/link.html
+++ b/subpage/link.html
@@ -10,7 +10,7 @@
   <ul>
     <li><a href="http://spatter.github.io" target="_blank">鈴木先輩</a></li>
     <li><a href="http://ken-nabe0823.github.io" target="_blank">渡辺先輩</a></li>
-    <li><a href="http://umi-kato.github.io" target="_blank">加藤先輩</a></li>
+    <li><a href="http://fumi-kato.github.io" target="_blank">加藤先輩</a></li>
     <li><a href="http://ochi-taku.github.io" target="_blank">落合先輩</a></li>
     <li><a href="http://S-Fujii27.github.io" target="_blank">藤井先輩</a></li>
     <li><a href="http://michiko1116.github.io" target="_blank">白木先輩</a></li>
