--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2><a href="http://zero440.github.io/mkdocs03/code/">課題ページ</a></h2>
   </nav>
 
-  <img src="picture/laguna.JPG" alt=ラグーナ蒲郡にて id=laguna>
+  <img src="picture/oyutop.JPG" alt=ペットのおゆ id=oyu>
 
   <footer>
   Copyright 2017
