--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2><a href="https://docs.google.com/forms/d/1lh3lVjbJ3kA-bbzLv4I1Y8H_8H1N7cBv--ExethrKDk">アンケート</a></h2>
     <h2><a href="http://zero440.github.io/mkdocs03/code/">課題ページ</a></h2>
   </nav>
-     <img src="picture/oyutop.JPG" alt=ラグーナ id=laguna>
+     <img src="picture/laguna.JPG" alt=ラグーナ id=laguna>
   <footer>
   Copyright 2017
   </footer>
