indexファイルの手直し

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1>吉尾の練習ページ</h1>
 
   <nav>
+    <p>これから再びここをつかう<p>
     <h2><a href="subpage/introduction.html">自己紹介ページ</a></h2>
     <h2><a href="subpage/link.html">リンク集</a></h2>
     <h2><a href="https://docs.google.com/forms/d/1lh3lVjbJ3kA-bbzLv4I1Y8H_8H1N7cBv--ExethrKDk">アンケート</a></h2>
