--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>吉尾の練習ページ</title>
 </head>
 <body>
-  <h1>吉尾の練習ページ</h1>
+  <h1>吉尾練習ページ</h1>
 
   <nav>
     <h2><a href="subpage/introduction.html">自己紹介</a></h2>
