--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <!-- スライドさせる画像の設定 -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="hamupic/neru1.jpg" alt="No1">
+                            <img src="hamupic/neru1.JPG" alt="No1">
                             <div class="carousel-caption">
                                 <h5>スヤスヤ</h5>
                             </div>
