課題・ジオチャート

--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
 
             <div class="container">
                 <div class="row text-center">
-                    <div class="col-sm-6 py-2"> <a href="old page/old.html" class="btn btn-primary btn-lg">旧ページ</a></div>
-                    <div class="col-sm-6 py-2"> <a href="kadai/index.html" class="btn btn-primary btn-lg">課題ページ</a></div>
+                    <div class="col-sm-4 py-2"> <a href="old page/old.html" class="btn btn-primary btn-lg">旧ページ</a></div>
+                    <div class="col-sm-4 py-2"> <a href="kadai/kadai.html" class="btn btn-primary btn-lg">課題ページ</a></div>
+                     <div class="col-sm-4 py-2"> <a href="https://zero440.github.io/myblog/" class="btn btn-primary btn-lg">hexoブログ</a></div>
+                
                 </div>
             </div>
             
