Responsive Web Design

--- a/test.html
+++ b/test.html
@@ -11,15 +11,14 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/github.min.css">
     <link rel="stylesheet" href="http://cccabinet.jpn.org/bootstrap4/css/style.css">
-    <!--かるーせる調整用のcss    -->
+<!--かるーせる調整用のcss    -->
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body background="bg.png">
     <div class="container">
         <div class="row center">
-            <!--空白いれて調整用-->
-            <div class="col-sm-1 col-md-2 col-lg-3 col-xl-3"> </div>
+<!--空白いれて調整用--><div class="col-sm-1 col-md-2 col-lg-3 col-xl-"> </div>
             <div class="col-xs-4 col-sm-5 col-md-4 col-lg-3 col-xl-3 py-4">
                 <div id="carouselOption1" class="carousel slide" data-ride="carousel">
                     <!-- インジケータの設定 -->
@@ -103,11 +102,11 @@
                 <div class="row text-center">
                     <div class="col-sm-4 py-2"> <a href="old page/old.html" class="btn btn-primary btn-lg">旧ページ</a></div>
                     <div class="col-sm-4 py-2"> <a href="kadai/kadai.html" class="btn btn-primary btn-lg">課題ページ</a></div>
-                    <div class="col-sm-4 py-2"> <a href="https://zero440.github.io/myblog/" class="btn btn-primary btn-lg">hexoブログ</a></div>
-
+                     <div class="col-sm-4 py-2"> <a href="https://zero440.github.io/myblog/" class="btn btn-primary btn-lg">hexoブログ</a></div>
+                
                 </div>
             </div>
-
+            
             <footer class="text-center text-muted py-4">
                 Copyright zero440 2018
             </footer>
